lab 11 actually done

--- a/Marcus/FirstJavaFXProject/bin/primary.fxml
+++ b/Marcus/FirstJavaFXProject/bin/primary.fxml
@@ -4,15 +4,15 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.FlowPane?>
 
-<FlowPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PrimaryController">
+<FlowPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PrimaryController">
     <children>
-        <Label text="Player's choice: " />
-        <Label fx:id="playerChoiceLabel" />
         <Label text="Computer's choice: " />
+        <Label alignment="TOP_CENTER" text="Player's choice: " />
+        <Button id="1" onAction="#onChoiceButtonClick" text="Rock" />
+        <Label fx:id="playerChoiceLabel" />
         <Label fx:id="computerChoiceLabel" />
         <Label fx:id="resultLabel" />
-        <Button text="Rock" onAction="#onChoiceButtonClick" id="1" />
-        <Button text="Paper" onAction="#onChoiceButtonClick" id="2" />
-        <Button text="Scissors" onAction="#onChoiceButtonClick" id="3" />
+        <Button id="2" alignment="TOP_CENTER" onAction="#onChoiceButtonClick" text="Paper" />
+        <Button id="3" onAction="#onChoiceButtonClick" text="Scissors" />
     </children>
 </FlowPane>
