--- a/Marcus/labassignment12/src/main/java/pancake/lab12/hellofx.fxml
+++ b/Marcus/labassignment12/src/main/java/pancake/lab12/hellofx.fxml
@@ -1,9 +1,4 @@
-/////////////////////////
-// CSCI 3326.01
-// Summer II 2023
-// Lab Assignment 11A
-// <Marcus Gutierrez> 
-/////////////////////////
+pacakge pancake.lab12; 
 
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
@@ -12,11 +7,15 @@ import javafx.scene.Scene;
 import javafx.stage.Stage;
 
 public class App extends Application {
+
     @Override
     public void start(Stage primaryStage) throws Exception {
-        Parent root = FXMLLoader.load(getClass().getResource("primary.fxml"));
-        primaryStage.setTitle("Lab Assignment 11A");
-        primaryStage.setScene(new Scene(root, 800, 600));
+        Parent root = FXMLLoader.load(getClass().getResource("PrimaryController.fxml"));
+
+        Scene scene = new Scene(root, 800, 600);
+
+        primaryStage.setTitle("Lab Assignment 12A");
+        primaryStage.setScene(scene);
         primaryStage.show();
     }
 
